<resources>
    <string name="app_name">Team12BOF</string>
    <string name="add_class_title">Add Class</string>

    <string-array name="years">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
    </string-array>
    <string-array name="quarters">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session I</item>
        <item>Summer Session II</item>
        <item>Special Summer Session</item>
    </string-array>
    <string-array name="class_size">
        <item>Tiny (less than 40)</item>
        <item>Small(40-75)</item>
        <item>Medium(75-150)</item>
        <item>Large(150-250)</item>
        <item>Huge(250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>
    <string name="title_activity_mocked_message">MockedMessageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>